changed points to "points: " + points

--- a/mamas10centMushroomgame.html
+++ b/mamas10centMushroomgame.html
@@ -49,7 +49,7 @@ _V
 		       	if (foods[input] !== undefined) {
 		       		document.getElementById('answer').innerHTML = foods[input];
 		       		points++;
-		       		document.getElementById('mushroom').innerHTML = points;
+		       		document.getElementById('mushroom').innerHTML = "points: " + points;
 		       	} else {
 		       		document.getElementById('answer').innerHTML = "nooooot a food! not a food! not a food!";
 		       	}
