--- a/mamas10centMushroomgame.html
+++ b/mamas10centMushroomgame.html
@@ -42,6 +42,10 @@ _V
 /_/   \\                 - 
 	   \\___________ . '
 `
+				"duck":`
+				
+			,,,  D_
+		  ,',','-`
 };
 		       //food check
 		       function checkFood() {
