--- a/mamas10centMushroomgame.html
+++ b/mamas10centMushroomgame.html
@@ -48,6 +48,17 @@ _V
 		      ,',','
 		  
 		  `,
+		  "yuck":'starts with a "P" and ends with an "LE", no caps',
+	  	  "dragon":`
+     /\_   
+   ,'   ".,__,.,     |\
+   |  * __,,..-; |\_/  |__/|_ 
+   \   _ VVVVV _/            |
+    '-., '-.,_ \  _   _     /
+        ^'-.,;	|/  \|  \  |
+                         |/ 
+                          
+`		  
 };
 		       //food check
 		       function checkFood() {
