fixed new ascii?

--- a/mamas10centMushroomgame.html
+++ b/mamas10centMushroomgame.html
@@ -50,12 +50,12 @@ _V
 		  `,
 		  "yuck":'starts with a "P" and ends with an "LE", no caps',
 	  	  "dragon":`
-     /\_   
-   ,'   ".,__,.,     |\
-   |  * __,,..-; |\_/  |__/|_ 
-   \   _ VVVVV _/            |
+     /\\_   
+   ,'   ".,__,.,     |\\
+   |  * __,,..-; |\\_/  |__/|_ 
+   \\   _ VVVVV _/            |
     '-., '-.,_ \  _   _     /
-        ^'-.,;	|/  \|  \  |
+        ^'-.,;	|/  \\|  \  |
                          |/ 
                           
 `		  
